--- a/servicos_cliente.html
+++ b/servicos_cliente.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nailspot | Serviços</title>
-    <link rel="stylesheet" href="css/servicos.css">
+    <link rel="stylesheet" href="css/servicos_cliente.css">
 </head>
 <body>
   <header class="navbar">
@@ -14,9 +14,9 @@
         </div>
     <nav>
       <ul>
-        <li><a href="servicos.html" class="active">Serviços</a></li>
-        <li><a href="agenda.html">Agenda</a></li>
-        <li><a href="perfil-cliente.html">Perfil</a></li>
+        <li><a href="servicos_cliente.html" class="active">Serviços</a></li>
+        <li><a href="agenda_cliente.html">Agenda</a></li>
+        <li><a href="perfil_cliente.html">Perfil</a></li>
       </ul>
     </nav>
   </header>
@@ -32,8 +32,8 @@
         <p>Limpeza, corte e esmaltação das unhas das mãos.</p>
         <span class="preco">R$ 25,00</span>
         <div class="botoes">
-          <button onclick="window.location.href='novo-agendamento.html'">Agendar</button>
-          <button class="btn-contato" onclick="window.location.href='contato.html'">Contato</button>
+          <button class="botao rosa" window.location.href='novo-agendamento.html'>Agendar</button>
+          <button class="botao branco" onclick="window.location.href='contato.html'">Contato</button>
         </div>
       </div>
 
@@ -42,8 +42,8 @@
         <p>Tratamento completo dos pés, com esfoliação e esmaltação.</p>
         <span class="preco">R$ 30,00</span>
         <div class="botoes">
-          <button onclick="window.location.href='novo-agendamento.html'">Agendar</button>
-          <button class="btn-contato" onclick="window.location.href='contato.html'">Contato</button>
+          <button class="botao rosa"  onclick="window.location.href='novo-agendamento.html'">Agendar</button>
+          <button class="botao branco" onclick="window.location.href='contato.html'">Contato</button>
         </div>
       </div>
 
@@ -67,6 +67,10 @@
         </div>
       </div>
     </div>
+
   </main>
+    <footer class="rodape">
+        <p>© 2025 NailSpot - Seu momento de beleza e bem-estar</p>
+    </footer>
 </body>
 </html>
