--- a/login.html
+++ b/login.html
@@ -18,7 +18,7 @@
             <h1>Bem-Vindo ao NailSpot</h1>
             <p class="subtitulo">O melhor lugar para seu agendamento de manicure e pedicure!</p>
 
-            <form class="formulario" action="servicos.html" method="POST">
+            <form class="formulario" action="servicos_cliente.html" method="POST">
                 <div class="campo">
                     <label for="email">E-mail</label>
                     <input type="email" id="email" name="email" placeholder="seuemail@email.com" required>
