--- a/cliente-cadastro.html
+++ b/cliente-cadastro.html
@@ -3,29 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nailspot | Cadastro Empresa</title>
-    <link rel="stylesheet" href="css/cadastro_empresa.css">
+    <title>Nailspot | Cadastro Cliente</title>
+    <link rel="stylesheet" href="css/cliente-cadastro.css">
+    <link rel="shortcut icon" href="img/LogoNailspotofc.png">
 </head>
 <body>
-    <header class="topo">
+     <header class="navbar">
         <div class="logo">
-            <img src="img/LogoNailspot+.png" alt="Logo NailSpot">
-            <span class="nome">NailSpot</span>
+            <img src="img/LogoNailspotofc.png" alt="Logo NailSpot">
+            <span class="nome-logo">NailSpot</span>
         </div>
     </header>
-     <main class="conteudo">
-        <h1>Cadastro de Empresa</h1>
-        <p>Cadastre seu salão e comece a receber agendamentos de clientes</p>
+
+    <main class="container">
+        <h1>Cadastro de Cliente</h1>
+        <p>Preencha seus dados para criar sua conta e começar a agendar seus serviços</p>
 
         <form class="formulario">
-            <label>Nome / Razão Social</label>
-            <input type="text" placeholder="Ex:. Maria Silva Santos" required>
+            <label>Nome Completo</label>
+            <input type="text" placeholder="EX:. Maria Silva Santos" required>
 
             <label>E-mail</label>
             <input type="email" placeholder="Ex:. meuemail@gmail.com" required>
 
-            <label>CPF / CNPJ</label>
-            <input type="text" placeholder="00.000.000/0000-00" required>
+            <label>CPF</label>
+            <input type="text" placeholder="000.000.000-00" required>
 
             <label>Senha</label>
             <input type="password" placeholder="********" required>
