--- a/cliente-servicos.html
+++ b/cliente-servicos.html
@@ -4,25 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nailspot | Serviços</title>
-    <link rel="stylesheet" href="css/servicos_cliente.css">
+    <link rel="stylesheet" href="css/cliente-servicos.css">
+    <link rel="shortcut icon" href="img/LogoNailspotofc.png">
 </head>
 <body>
   <header class="navbar">
-        <div class="logo">
-            <img src="img/LogoNailspot+.png" alt="Logo NailSpot">
-            <span class="nome">NailSpot</span>
-        </div>
+      <div class="logo">
+          <img src="img/LogoNailspotofc.png" alt="Logo NailSpot">
+          <span class="nomeLogo">NailSpot</span>
+      </div>
     <nav>
       <ul>
-        <li><a href="servicos_cliente.html" class="active">Serviços</a></li>
-        <li><a href="agenda_cliente.html">Agenda</a></li>
-        <li><a href="perfil_cliente.html">Perfil</a></li>
+        <li><a href="cliente-servicos.html" class="ativo">Serviços</a></li>
+        <li><a href="cliente-agenda.html">Agenda</a></li>
+        <li><a href="cliente-perfil.html">Perfil</a></li>
       </ul>
     </nav>
   </header>
 
-  <!-- ======= CONTEÚDO PRINCIPAL ======= -->
-  <main class="servicos-container">
+  <main class="container">
     <h1>Nossos Serviços</h1>
     <p class="subtitle">Escolha o serviço desejado para agendar ou entrar em contato</p>
 
@@ -33,7 +33,7 @@
         <span class="preco">R$ 25,00</span>
         <div class="botoes">
           <button class="botao rosa" window.location.href='novo-agendamento.html'>Agendar</button>
-          <button class="botao branco" onclick="window.location.href='contato.html'">Contato</button>
+          <button class="botao branco" onclick="window.location.href='cliente-contato.html'">Contato</button>
         </div>
       </div>
 
