--- a/login.html
+++ b/login.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nailspot | Login</title>
     <link rel="stylesheet" href="css/login.css">
+    <link rel="shortcut icon" href="img/LogoNailspotofc.png">
 </head>
 <body>
-    <header class="topo">
+    <header class="navbar">
         <div class="logo">
-            <img src="img/LogoNailspot+.png" alt="Logo NailSpot">
-            <span class="nome">NailSpot</span>
+            <img src="img/LogoNailspotofc.png" alt="Logo NailSpot">
+            <span class="nome-logo">NailSpot</span>
         </div>
     </header>
     <main class="container">
@@ -18,7 +19,7 @@
             <h1>Bem-Vindo ao NailSpot</h1>
             <p class="subtitulo">O melhor lugar para seu agendamento de manicure e pedicure!</p>
 
-            <form class="formulario" action="servicos_cliente.html" method="POST">
+            <form class="formulario" action="cliente-servicos.html" method="POST">
                 <div class="campo">
                     <label for="email">E-mail</label>
                     <input type="email" id="email" name="email" placeholder="seuemail@email.com" required>
@@ -29,7 +30,7 @@
                     <input type="password" id="senha" name="senha" placeholder="********" required>
                 </div>
                 <div class="opção">
-                    <a href="esqueci_senha.html" class="esqueciSenha">Esqueci minha senha</a>
+                    <a href="esqueci-senha.html" class="esqueciSenha">Esqueci minha senha</a>
                 </div>
                 <button type="submit" class="btn-login">Entrar</button>
             </form>
