--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         <p class="subtitulo">O melhor lugar para seu agendamento de manicure e pedicure!</p>
         <p class="descricao">Conecte-se com profissionais qualificadas e agende seu momento de autocuidado.</p>
         <div class="botoes">
-            <a href="categoria.html" class="botao rosa">Cadastro</a>
-            <a href="login.html" class="botao branco">Login</a>
+            <a href="categoria.php" class="botao rosa">Cadastro</a>
+            <a href="login.php" class="botao branco">Login</a>
         </div>
         </section>
     </main>
